Remove secrets and update gateway for security and routes.